--- a/evento-master/app/src/main/res/layout/content_payment.xml
+++ b/evento-master/app/src/main/res/layout/content_payment.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+    tools:context="com.fireblaze.evento.activities.SendNotificationActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
+    <com.braintreepayments.cardform.view.CardForm
+    android:id="@+id/card_form"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.PaymentActivity"
-    tools:showIn="@layout/activity_payment">
+    android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar3"/>
 
+<Button
+    android:id="@+id/btnBuy"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginTop="10dp"
+    android:background="@color/colorAccent"
+    android:text="Buy Now"
+    android:textColor="@android:color/white" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
