--- a/evento-master/app/src/main/res/layout/activity_booked_events_list.xml
+++ b/evento-master/app/src/main/res/layout/activity_booked_events_list.xml
@@ -5,15 +5,18 @@
         android:id="@+id/activity_booked_events_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="16dp"
         android:orientation="vertical"
         tools:context="com.fireblaze.evento.activities.BookedEventsListActivity">
+
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="477dp" />
+
     </LinearLayout>
 </layout>
