--- a/evento-master/app/src/main/res/layout/booked_event_item.xml
+++ b/evento-master/app/src/main/res/layout/booked_event_item.xml
@@ -12,10 +12,12 @@
         android:id="@+id/booked_event_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <Button
-        android:text="Cancel"
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"/>
+        android:layout_gravity="end"
+        android:text="Cancel"
+        />
 </LinearLayout>
