--- a/evento-master/app/src/main/res/layout/content_event_details2.xml
+++ b/evento-master/app/src/main/res/layout/content_event_details2.xml
@@ -92,6 +92,13 @@
                         android:text="01 Jan 2017 | 12:00"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:text="Description:" />
+
                     <TextView
                         android:layout_marginTop="20dp"
                         android:id="@+id/text_event_details"
