--- a/evento-master/app/src/main/res/layout/content_organizer_details1.xml
+++ b/evento-master/app/src/main/res/layout/content_organizer_details1.xml
@@ -25,7 +25,7 @@
             <RelativeLayout
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/text_title"
                     style="@style/Base.TextAppearance.AppCompat.Title"
@@ -36,24 +36,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
-                    <ImageView
-                        android:id="@+id/star_image"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/ic_star_rate_black_18dp"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp" />
-                    <TextView
-                        android:id="@+id/textBookingCount"
-                        android:textSize="20sp"
-                        android:layout_toStartOf="@id/star_image"
-                        android:layout_toLeftOf="@id/star_image"
-                        android:text="10"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                </RelativeLayout>
+            </RelativeLayout>
             <TextView
                 android:text="The information uploaded by the organizer is displayed below"
                 android:layout_width="match_parent"
@@ -67,7 +50,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/text_email"
-                android:text="bchaitanya15@gmail.com"
+                android:text="xyz@gmail.com"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
@@ -80,16 +63,7 @@
                 android:id="@+id/text_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            <TextView
-                android:textSize="20sp"
-                android:layout_marginTop="20dp"
-                android:text="Website:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/text_website"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_verification"
                 android:visibility="gone"
@@ -106,6 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/BlackCurvedButton"/>
+
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </layout>
