--- a/evento-master/app/src/main/res/layout/content_organizer_details2.xml
+++ b/evento-master/app/src/main/res/layout/content_organizer_details2.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/text_email"
-                android:text="bchaitanya15@gmail.com"
+                android:text="xyz@gmail.com"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
@@ -78,18 +78,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0000000000" />
-            <TextView
-                android:textSize="20sp"
-                android:layout_marginTop="20dp"
-                android:text="Website:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/text_website"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="www.xyz.com" />
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/input_layout_verification"
                 android:visibility="gone"
