--- a/evento-master/app/src/main/res/layout/content_payment.xml
+++ b/evento-master/app/src/main/res/layout/content_payment.xml
@@ -32,7 +32,7 @@ android:layout_height="match_parent"
     android:layout_marginRight="40dp"
     android:layout_marginTop="10dp"
     android:background="@color/colorAccent"
-    android:text="Buy Now"
+    android:text="Book Event"
     android:textColor="@android:color/white" />
 
 </RelativeLayout>
