--- a/evento-master/app/src/main/res/layout/content_send_notification.xml
+++ b/evento-master/app/src/main/res/layout/content_send_notification.xml
@@ -39,5 +39,5 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></Spinner>
+        android:layout_height="wrap_content" />
 </LinearLayout>
