--- a/evento-master/app/src/main/res/layout/activity_new_organizer.xml
+++ b/evento-master/app/src/main/res/layout/activity_new_organizer.xml
@@ -77,6 +77,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="1"
+                        android:maxLength="10"
                         android:hint="Phone"/>
                 </android.support.design.widget.TextInputLayout>
                 <Button
