--- a/evento-master/app/src/main/res/values/styles.xml
+++ b/evento-master/app/src/main/res/values/styles.xml
@@ -46,7 +46,10 @@
     <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/black_overlay</item>
     </style>
-    <!--<style name="Rating_bar_style" parent="Base.Widget.AppCompat.RatingBar">-->
-        <!--<item name="andr-->
-    <!--</style>-->
+
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/colorPrimary</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
+    </style>
+
 </resources>
